Mobile screen layout bug fix

--- a/public/static/css/styles.css
+++ b/public/static/css/styles.css
@@ -180,7 +180,7 @@ body.dark-body {
 
 @media (max-width: 767px) {
   .page-content {
-    padding: 85px 20px 30px;
+    padding: 85px 20px 130px;
   }
 }
 
@@ -305,10 +305,10 @@ body.dark-body {
 /*---------------------------------
   Section Title
 -----------------------------------*/
-.section-titel {
+.section-title {
   margin: 0 0 40px;
 }
-.section-titel h6 {
+.section-title h6 {
   display: inline-block;
   vertical-align: top;
   position: relative;
@@ -320,7 +320,7 @@ body.dark-body {
   margin: 0 0 8px;
   text-transform: uppercase;
 }
-.section-titel h6:after {
+.section-title h6:after {
   top: 0;
   bottom: 0;
   left: 0;
@@ -332,7 +332,7 @@ body.dark-body {
   -webkit-transform: skew(-20deg);
 }
 
-.section-titel h2 {
+.section-title h2 {
   font-size: 45px;
   font-weight: 700;
   position: relative;
@@ -345,7 +345,7 @@ body.dark-body {
   margin: 0;
 }
 
-.section-titel h2:after {
+.section-title h2:after {
   height: 8px;
   width: 50px;
   bottom: -4px;
@@ -386,21 +386,21 @@ body.dark-body {
 }
 
 @media (max-width: 1200px) {
-  .section-titel h6 {
+  .section-title h6 {
     padding: 3px 8px;
     letter-spacing: 2px;
     font-size: 10px;
   }
-  .section-titel h2 {
+  .section-title h2 {
     font-size: 35px;
   }
 }
 
 @media (max-width: 991px) {
-  .section-titel h2 {
+  .section-title h2 {
     font-size: 30px;
   }
-  .section-titel {
+  .section-title {
     margin: 0 0 30px;
   }
 }
@@ -619,6 +619,7 @@ body.dark-body {
   }
   .home-banner-light .social-icons,
   .home-banner-dark .social-icons {
+    bottom: 120px;
     left: 30px;
   }
   .home-text h1 {
